intergarte comment api

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,6 +23,20 @@
   background: white;
 }
 .outletDiv {
-  min-height: 84vh;
-  margin-top: 66px;
+  min-height: 76vh;
+  margin-top: 56px;
+}
+.img44 {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+}
+::-webkit-scrollbar {
+  width: 2px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
 }
